--- a/ToDoList/templates/ToDoList/index.html
+++ b/ToDoList/templates/ToDoList/index.html
@@ -1,10 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="row">
-    <div class="col">
-        <h2>Add Item</h2>
-
+    <div class="row mt-4">
+        <div class="col">
+            <h2>Add Item</h2>
+            <form class="form-inline">
+                <input type="text" class="form-control mb-2 mr-sm-2" placeholder="type here...">
+                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            </form>
+        </div>
     </div>
+
+    <div class="row mt-4">
+       <div class="col">
+           <ul class="list-group">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item">Morbi leo risus</li>
+              <li class="list-group-item">Porta ac consectetur ac</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+           </ul>
+       </div>
     </div>
 {% endblock content %}
