used POST to show saving of data in database

--- a/ToDoList/templates/ToDoList/index.html
+++ b/ToDoList/templates/ToDoList/index.html
@@ -4,8 +4,8 @@
     <div class="row mt-4">
         <div class="col">
             <h2>Add Item</h2>
-            <form class="form-inline">
-                <input type="text" class="form-control mb-2 mr-sm-2" placeholder="type here...">
+            <form action="add_todo/" method="post" class="form-inline">
+                <input type="text" class="form-control mb-2 mr-sm-2" name="content" placeholder="type here...">
                 <button type="submit" class="btn btn-primary mb-2">Submit</button>
             </form>
         </div>
