Made storing of objects permanent in the database.
Also, looped through database items to show in index.html

--- a/ToDoList/templates/ToDoList/index.html
+++ b/ToDoList/templates/ToDoList/index.html
@@ -14,11 +14,15 @@
     <div class="row mt-4">
        <div class="col">
            <ul class="list-group">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
-              <li class="list-group-item">Morbi leo risus</li>
-              <li class="list-group-item">Porta ac consectetur ac</li>
-              <li class="list-group-item">Vestibulum at eros</li>
+               {% for todo_item in todo_items %}
+                 <li class="list-group-item">
+                     {{ todo_item.text }}
+                     <div class="float-right">
+                        <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+                     </div>
+                 </li>
+
+               {% endfor %}
            </ul>
        </div>
     </div>
