Changed name of button to delete

--- a/ToDoList/templates/ToDoList/index.html
+++ b/ToDoList/templates/ToDoList/index.html
@@ -18,7 +18,7 @@
                  <li class="list-group-item">
                      {{ todo_item.text }}
                      <div class="float-right">
-                        <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-sm btn-primary">Delete</button>
                      </div>
                  </li>
 
